Update depedencies and use Osmosis PBF writer and random fixes